Removing last lingering Jackrabbit dependency...